add tooltip system

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
 
   <body>
     <p>The time is currently</p>
-    <p id='time'>0</p>
+    <p id='time' data-tooltip='Copy to Clipboard'>0</p>
     <p>in Minecraft ticks.</p>
+
+    <div id='tooltip' class='hidden'>Tooltip</div>
   </body>
 </html>
