add github link to page

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
     <p id='time' data-tooltip='Copy to Clipboard'>0</p>
     <p>in Minecraft ticks.</p>
 
+    <div id='source'>
+      View on <a href='https://github.com/lolPants/minecraft-time' target='_blank' rel='noopener noreferrer'>GitHub</a>
+    </div>
+
     <div id='tooltip' class='hidden'>Tooltip</div>
   </body>
 </html>
