draw stars with canvas

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   </head>
 
   <body>
+    <canvas id='stars'></canvas>
+
     <p>The time is currently</p>
     <p id='time' data-tooltip='Copy to Clipboard'>0</p>
     <p>in Minecraft ticks.</p>
